apps/libtest-3/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: libtest-3
  namespace: dev
  labels:
    app: libtest-3
    backstage.io/kubernetes-id: libtest-3
    environment: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: libtest-3
  template:
    metadata:
      labels:
        app: libtest-3
        backstage.io/kubernetes-id: libtest-3
        environment: dev
        tags.datadoghq.com/env: dev
        tags.datadoghq.com/service: libtest-3
        tags.datadoghq.com/version: "1.0"
    spec:
      containers:
        - name: libtest-3
          image: jaykumark7/libtest-3:1.0.3
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "384Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
