apps/libtest-3/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: libtest-3
  namespace: dev
  labels:
    backstage.io/kubernetes-id: libtest-3
spec:
  selector:
    app: libtest-3
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
